--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </p>
         <h2>Superpowers:</h2>
         <ul>
-          <li>I can code HTML</li>
-          <li>I can code CSS</li>
+          <li>killer stace</li>
+          <li>im buetiful</li>
           <li>I can code Javascript</li>
           <li>I can pick up a car! (Totally useless....)</li>
         </ul>
